--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,12 @@
         "default_popup": "popup.html"
     },
 
+    "icons": {
+        "16": "img/icon.png",
+        "48": "img/icon.png",
+        "128": "img/icon.png"
+    },
+
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
 
     "options_page": "options.html"
