--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "manifest_version": 2,
     "name": "Whotrades",
     "version": "0.0.1",
-    "description": "Hubble pictures extension",
+    "default_locale": "ru",
+    "description": "Actions on WhoTrades.com",
     "author": "Salavat Dautov",
 
 
